# formatter-deployment

./: .gitignore  README.md  app.py  build.py  dev_notes.txt  format_file.lnk  format_file.py  index.html  mdToOb.py  netlify.toml  process.php  pyproject.toml  runMdToOb.ps1  run_cli.lnk  run_python.ps1  start_cli.ps1  test_page.md
.github/workflows/: build-test.yaml  build.yaml  tests.yaml
backend/: Procfile  app.py  render.yaml  requirements.txt
netlify/functions/: format.py
note_formatter/: cli.py  config.py  format_file.py  formatter.py  symbols.py  toc.py
note_formatter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
note_formatter/data/: symbols.json
shared/: symbols.json
tests/: test_formatting.py  test_symbols.py
tests/data/: expected.md  input.md
website/: index.html  online-formatter.html  script.js  style.css  symbol-table.html
website/data/: symbols.json
