[build-system]
requires = ["setuptools >= 77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "note-formatter"
version = "0.1.0"
description = "Formats custom markdown symbols and generates a table of contents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
symbol-formatter = "note_formatter.cli:main"